--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Primary Meta Tags -->
+    <title>EXCLUSIVE-GAMES</title>
+    <meta name="title" content="EXCLUSIVE-GAMES" />
+    <meta name="description" content="Exclusive Games. Pasión por ganar" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="EXCLUSIVE-GAMES" />
+    <meta
+      property="og:description"
+      content="Exclusive Games. Pasión por ganar"
+    />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/CBZ2JtQ/casino.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="EXCLUSIVE-GAMES" />
+    <meta
+      property="twitter:description"
+      content="Exclusive Games. Pasión por ganar"
+    />
+    <meta
+      property="twitter:image"
+      content="https://i.ibb.co/CBZ2JtQ/casino.webp"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
