--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./jackpot1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -37,10 +37,7 @@
       property="og:description"
       content="Exclusive Games. Pasión por ganar"
     />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/CBZ2JtQ/casino.webp"
-    />
+    <meta property="og:image" content="https://i.ibb.co/CBZ2JtQ/casino.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
